tests/NormalTests/paczka1/small_fuzzy/45960068.err
Error in line 2: 2OUUuS4LoSH A260 24,0
Error in line 4: 2OUUuS4LoSH A788 83,2
Error in line 6: 2OUUuS4LoSH A260 24,9
Error in line 7: 2OUUuS4LoSH S45 27,4
Error in line 10: A788 S45 51,0
Error in line 13: A788 A629 74,2
